--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# fork original
+data/**
+uv.lock
+
 # Custom
 *.onnx
 deform_conv2d_onnx_exporter*
@@ -147,3 +151,6 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# ignore
+!data/.keep
